--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "bevy_locomotion"
 version = "0.1.0"
 edition = "2024"
+description = "A first-person character controller for Bevy and Avian3d"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/Nub/bevy_locomotion"
 
 [dependencies]
 bevy = "0.18"
